--- a/inventory.ini
+++ b/inventory.ini
@@ -18,3 +18,7 @@ shipping.rameshaws.site
 rabbitmq.rameshaws.site
 [payment]
 payment.rameshaws.site
+
+[all:vars]
+ansible_user=ec2-user
+ansible_password=DevOps321
