--- a/main.yml
+++ b/main.yml
@@ -1,7 +1,7 @@
 ---
   - name: configure {{ component }}
-    hosts: {{ component }}
+    hosts: "{{ component }}"
     become: yes
 
     roles:
-    - {{ component }}
+    - "{{ component }}"
