--- a/roles/common/tasks/app-setup.yml
+++ b/roles/common/tasks/app-setup.yml
@@ -1,4 +1,4 @@
-    - name: Create roboshop system user for catalogue
+    - name: Create roboshop system user for {{ component }}
       ansible.builtin.user:
         name: roboshop
         shell: /bin/bash
@@ -10,13 +10,13 @@
         name: /app
         state: directory
 
-    - name: Download catalogue source code
+    - name: Download {{ component }} source code
       ansible.builtin.get_url:
-        url: https://roboshop-artifacts.s3.amazonaws.com/catalogue-v3.zip
-        dest: /tmp/catalogue.zip
+        url: "https://roboshop-artifacts.s3.amazonaws.com/{{ component }}-v3.zip"
+        dest: "/tmp/{{ component }}.zip"
 
-    - name: Unzip catalogue source code
+    - name: Unzip {{ component }} source code
       ansible.builtin.unarchive:
-        src: /tmp/catalogue.zip
+        src: "/tmp/{{ component }}.zip"
         dest: /app
         remote_src: yes
