--- a/roles/common/tasks/systemd.yml
+++ b/roles/common/tasks/systemd.yml
@@ -1,21 +1,22 @@
-    - name: copy catalogue service file
+---
+    - name: copy {{ component }} service file
       ansible.builtin.template:
-        src: catalogue.service.j2
-        dest: /etc/systemd/system/catalogue.service
+        src: "{{ component }}.service.j2"
+        dest: "/etc/systemd/system/{{ component }}.service"
         mode: '0644'
 
     - name: Reload systemd to recognize new service
       ansible.builtin.systemd:
         daemon_reload: yes
 
-    - name: Start and enable catalogue service
+    - name: Start and enable {{ component }} service
       ansible.builtin.service:
-        name: catalogue
+        name: "{{ component }}"
         state: started
         enabled: yes
     
-    - name: Ensure catalogue service is running
-      ansible.builtin.command: systemctl status catalogue
-      register: catalogue_status
-      failed_when: "'Active: active (running)' not in catalogue_status.stdout"
-      changed_when: false
+    # - name: Ensure {{ component }} service is running
+    #   ansible.builtin.command: systemctl status {{ component }}
+    #   register: catalogue_status
+    #   failed_when: "'Active: active (running)' not in catalogue_status.stdout"
+    #   changed_when: false
