--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -30,7 +30,7 @@
     - name: Load products 
       ansible.builtin.shell: mongosh --host mongodb.rameshaws.site < /app/db/master-data.js
       when: load_products_data.stdout | int < 0  
-      ignore_errors: true
+      ignore_unreachable: true
 
     - name: systemd setup
       include_role: 
