--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -39,9 +39,9 @@
         name: common
         tasks_from: systemd
 
-    - name: app setup using tags
+    - name: Deployment using tags
       tags:
       - deployment
-      include_role: 
+      import_role: 
         name: common
         tasks_from: deployment
