import vs include

--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -42,6 +42,6 @@
     - name: Deployment using tags
       tags:
       - deployment
-      import_role: 
+      include_role: 
         name: common
         tasks_from: deployment
