--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -22,17 +22,17 @@
     - name: check if products data is loaded
       ansible.builtin.command: mongosh --host mongodb.rameshaws.site --eval 'db.getMongo().getDBNames().indexOf("catalogue")'
       register: load_products_data
-      ignore_errors: true
+      #ignore_errors: true
 
     - name: print products data load status
       ansible.builtin.debug:
         msg: "{{ load_products_data }}"
-      ignore_errors: true
+      #ignore_errors: true
 
     - name: Load products 
       ansible.builtin.shell: mongosh --host mongodb.rameshaws.site < /app/db/master-data.js
       when: load_products_data.stdout | int < 0  
-      ignore_errors: true
+      #ignore_errors: true
 
     - name: systemd setup
       include_role: 
