--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -11,4 +11,4 @@
         enabled: yes
 
     - name: setup root password
-      ansible.builtin.command: mysql_secure_installation --set-root-pass RoboShop@1
+      ansible.builtin.command: mysql_secure_installation --set-root-pass {{ MYSQL_ROOT_PASSWORD }}
