changes for terraform

--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -1,33 +1,33 @@
 ---
-    - name: copy mongodb repo
+    - name: 1.copy mongodb repo
       ansible.builtin.copy:
         src: mongodb.repo
         dest: /etc/yum.repos.d/mongodb.repo
 
-    - name: install mongodb
+    - name: 2.install mongodb
       ansible.builtin.dnf:
         name: mongodb-org
         state: present
 
-    - name: start and enable mongodb service
+    - name: 3.start and enable mongodb service
       ansible.builtin.service:
         name: mongod
         state: started
         enabled: yes
 
-    - name: ensure mongodb is running
+    - name: 4.ensure mongodb is running
       ansible.builtin.command: systemctl status mongod
 
-    - name: ensure mongodb is listening on port 27017
+    - name: 5.ensure mongodb is listening on port 27017
       ansible.builtin.command: netstat -lntp | grep 27017
 
-    - name: allow remote connections
+    - name: 6.allow remote connections
       ansible.builtin.replace:
         path: /etc/mongod.conf
         regexp: "127.0.0.1"
         replace: "0.0.0.0"
     
-    - name: restart mongodb service
+    - name: 7.restart mongodb service
       ansible.builtin.service:
         name: mongod
         state: restarted
