--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -1,15 +1,15 @@
 ---
-    - name: Install MySQL server
+    - name: 1.Install MySQL server
       ansible.builtin.dnf:
         name: mysql-server
         state: present
 
-    - name: Start and enable MySQL service
+    - name: 2.Start and enable MySQL service
       ansible.builtin.service:
         name: mysqld
         state: started
         enabled: yes
-    - name: install boto3 and botocore packages
+    - name: 3.install boto3 and botocore packages
       ansible.builtin.pip:
         name: "{{ item }}"
         executable: pip3.9
@@ -17,5 +17,5 @@
       - boto3
       - botocore
 
-    - name: setup root password
+    - name: 4.setup root password
       ansible.builtin.command: mysql_secure_installation --set-root-pass {{ MYSQL_ROOT_PASSWORD }}
